--- a/XyrusWorx.Gaming.AnnoCompanion/NuGet.config
+++ b/XyrusWorx.Gaming.AnnoCompanion/NuGet.config
@@ -2,6 +2,8 @@
 <configuration>
   <packageSources>
     <add key="XyrusWorx Foundation" value="..\Foundation" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
   </packageSources>
   <bindingRedirects>
     <add key="skip" value="True" />
