--- a/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion.csproj
+++ b/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion.csproj
@@ -104,20 +104,22 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Components\IconKeyConverter.cs" />
+    <Compile Include="Data\IDataProvider.cs" />
     <Compile Include="ObjectModel\BuildingInput.cs" />
     <Compile Include="ObjectModel\BuildingOutput.cs" />
     <Compile Include="ObjectModel\ConstructionMaterial.cs" />
-    <Compile Include="ObjectModel\ConstructionMaterials.cs" />
-    <Compile Include="ObjectModel\JsonBuildingInputConverter.cs" />
-    <Compile Include="ObjectModel\JsonBuildingOutputConverter.cs" />
-    <Compile Include="ObjectModel\JsonBuildingRestrictionsConverter.cs" />
-    <Compile Include="ObjectModel\JsonFactionConverter.cs" />
-    <Compile Include="ObjectModel\JsonIndexedObjectConverter.cs" />
-    <Compile Include="ObjectModel\JsonReferenceResolver.cs" />
+    <Compile Include="Data\ConstructionMaterials.cs" />
+    <Compile Include="Serialization\JsonBuildingInputConverter.cs" />
+    <Compile Include="Serialization\JsonBuildingOutputConverter.cs" />
+    <Compile Include="Serialization\JsonBuildingRestrictionsConverter.cs" />
+    <Compile Include="Serialization\JsonFactionConverter.cs" />
+    <Compile Include="Serialization\JsonIndexedObjectConverter.cs" />
+    <Compile Include="Serialization\JsonReferenceResolver.cs" />
     <Compile Include="ObjectModel\RawMaterial.cs" />
-    <Compile Include="ObjectModel\RawMaterials.cs" />
+    <Compile Include="Data\RawMaterials.cs" />
+    <Compile Include="Data\Repository.cs" />
     <Compile Include="ObjectModel\WarfareMaterial.cs" />
-    <Compile Include="ObjectModel\WarfareMaterials.cs" />
+    <Compile Include="Data\WarfareMaterials.cs" />
     <Compile Include="Components\PopulationGroupConverter.cs" />
     <Compile Include="ViewModels\BuildingViewModel.cs" />
     <Compile Include="ViewModels\FactionViewModel.cs" />
@@ -165,19 +167,19 @@
     </Compile>
     <Compile Include="ObjectModel\Building.cs" />
     <Compile Include="ObjectModel\BuildingRestrictions.cs" />
-    <Compile Include="ObjectModel\Buildings.cs" />
+    <Compile Include="Data\Buildings.cs" />
     <Compile Include="ObjectModel\ConsumableGood.cs" />
-    <Compile Include="ObjectModel\ConsumableGoods.cs" />
+    <Compile Include="Data\ConsumableGoods.cs" />
     <Compile Include="ObjectModel\Factions.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="ObjectModel\Good.cs" />
-    <Compile Include="ObjectModel\IndexedObject.cs" />
+    <Compile Include="Data\Persistable.cs" />
     <Compile Include="ObjectModel\PopulationGroup.cs" />
-    <Compile Include="ObjectModel\PopulationGroups.cs" />
+    <Compile Include="Data\PopulationGroups.cs" />
     <Compile Include="ObjectModel\PopulationRequirement.cs" />
     <Compile Include="ObjectModel\ProductionChain.cs" />
     <Compile Include="ObjectModel\ProductionChainComponent.cs" />
-    <Compile Include="ObjectModel\ProductionChains.cs" />
+    <Compile Include="Data\ProductionChains.cs" />
     <Compile Include="ObjectModel\ProvisionCapacity.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\PageListViewModel.cs" />
@@ -423,6 +425,7 @@
     <Resource Include="Resources\Icons\ProductionChains\WineProduction.png" />
     <Resource Include="Resources\Icons\ProductionChains\WoodProduction.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
