* Continued dynamic object model

--- a/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion.csproj
+++ b/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion.csproj
@@ -104,22 +104,34 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Components\IconKeyConverter.cs" />
+    <Compile Include="Data\Model.cs" />
+    <Compile Include="Static\Fertilities.cs" />
     <Compile Include="Data\IDataProvider.cs" />
+    <Compile Include="Data\KeyClassAttribute.cs" />
+    <Compile Include="Static\MountainResources.cs" />
+    <Compile Include="Data\PersistedNode.cs" />
+    <Compile Include="Static\WaterResources.cs" />
     <Compile Include="ObjectModel\BuildingInput.cs" />
     <Compile Include="ObjectModel\BuildingOutput.cs" />
     <Compile Include="ObjectModel\ConstructionMaterial.cs" />
-    <Compile Include="Data\ConstructionMaterials.cs" />
+    <Compile Include="Static\ConstructionMaterials.cs" />
+    <Compile Include="Data\IInstancePool.cs" />
+    <Compile Include="ObjectModel\Depletable.cs" />
+    <Compile Include="ObjectModel\Fertility.cs" />
+    <Compile Include="ObjectModel\MountainResource.cs" />
+    <Compile Include="ObjectModel\ProductionBuilding.cs" />
+    <Compile Include="ObjectModel\Resource.cs" />
+    <Compile Include="ObjectModel\WaterResource.cs" />
     <Compile Include="Serialization\JsonBuildingInputConverter.cs" />
-    <Compile Include="Serialization\JsonBuildingOutputConverter.cs" />
     <Compile Include="Serialization\JsonBuildingRestrictionsConverter.cs" />
     <Compile Include="Serialization\JsonFactionConverter.cs" />
     <Compile Include="Serialization\JsonIndexedObjectConverter.cs" />
     <Compile Include="Serialization\JsonReferenceResolver.cs" />
     <Compile Include="ObjectModel\RawMaterial.cs" />
-    <Compile Include="Data\RawMaterials.cs" />
+    <Compile Include="Static\RawMaterials.cs" />
     <Compile Include="Data\Repository.cs" />
     <Compile Include="ObjectModel\WarfareMaterial.cs" />
-    <Compile Include="Data\WarfareMaterials.cs" />
+    <Compile Include="Static\WarfareMaterials.cs" />
     <Compile Include="Components\PopulationGroupConverter.cs" />
     <Compile Include="ViewModels\BuildingViewModel.cs" />
     <Compile Include="ViewModels\FactionViewModel.cs" />
@@ -167,19 +179,19 @@
     </Compile>
     <Compile Include="ObjectModel\Building.cs" />
     <Compile Include="ObjectModel\BuildingRestrictions.cs" />
-    <Compile Include="Data\Buildings.cs" />
+    <Compile Include="Static\Buildings.cs" />
     <Compile Include="ObjectModel\ConsumableGood.cs" />
-    <Compile Include="Data\ConsumableGoods.cs" />
-    <Compile Include="ObjectModel\Factions.cs" />
+    <Compile Include="Static\ConsumableGoods.cs" />
+    <Compile Include="ObjectModel\Faction.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="ObjectModel\Good.cs" />
     <Compile Include="Data\Persistable.cs" />
     <Compile Include="ObjectModel\PopulationGroup.cs" />
-    <Compile Include="Data\PopulationGroups.cs" />
+    <Compile Include="Static\PopulationGroups.cs" />
     <Compile Include="ObjectModel\PopulationRequirement.cs" />
     <Compile Include="ObjectModel\ProductionChain.cs" />
     <Compile Include="ObjectModel\ProductionChainComponent.cs" />
-    <Compile Include="Data\ProductionChains.cs" />
+    <Compile Include="Static\ProductionChains.cs" />
     <Compile Include="ObjectModel\ProvisionCapacity.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\PageListViewModel.cs" />
