--- a/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion.Models/XyrusWorx.Gaming.AnnoCompanion.Models.csproj
+++ b/XyrusWorx.Gaming.AnnoCompanion/XyrusWorx.Gaming.AnnoCompanion.Models/XyrusWorx.Gaming.AnnoCompanion.Models.csproj
@@ -51,8 +51,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="XyrusWorx.Foundation, Version=1.7.6.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\XyrusWorx.Foundation.1.7.6\lib\net462\XyrusWorx.Foundation.dll</HintPath>
+    <Reference Include="XyrusWorx.Foundation, Version=1.7.9.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\XyrusWorx.Foundation.1.7.9\lib\net462\XyrusWorx.Foundation.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
@@ -68,11 +68,14 @@
     <Compile Include="Fraction.cs" />
     <Compile Include="Good.cs" />
     <Compile Include="MountainResource.cs" />
+    <Compile Include="ObjectStoreModel.cs" />
     <Compile Include="PopulationGroup.cs" />
     <Compile Include="PopulationRequirement.cs" />
+    <Compile Include="PresetModel.cs" />
     <Compile Include="ProductionBuilding.cs" />
     <Compile Include="ProductionChain.cs" />
     <Compile Include="ProductionChainComponent.cs" />
+    <Compile Include="ProfileModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProvisionCapacity.cs" />
     <Compile Include="RawMaterial.cs" />
